# usbduino

./: README.md
device/rpi-pico/: CMakeLists.txt  build.sh  tusb_config.h  usb_descriptors.c  usbduino.c  usbduino.h
device/src/stm32f103/: stm32usb.ioc
device/src/stm32f103/Core/Inc/: usbd_conf.h
device/src/stm32f103/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd.c  usbd_conf.c
device/src/stm32f103/Debug/: makefile  objects.list  stm32usb.elf  stm32usb.list  stm32usb.map
device/src/stm32f103/Debug/Core/Src/: main.su  stm32f1xx_it.su  usbd.d  usbd_conf.su  usbd_conf_template.su  usbd_desc_template.su  usbd_hid.su
device/src/stm32f103/Release/: makefile  objects.list  stm32usb.elf  stm32usb.list  stm32usb.map
device/stm32f103/: .cproject  .mxproject  .project  stm32usb Debug.launch
device/stm32f103/Core/Inc/: main.h  stm32f1xx_hal_conf.h  usbd.h
device/stm32f103/Core/Src/: main.c  usb_device.c  usbd_desc.c
device/stm32f103/Debug/: makefile  stm32f103.elf  stm32f103.list  stm32f103.map
device/stm32f103/Debug/Core/Src/: main.d  main.su  stm32f1xx_hal_msp.d  stm32f1xx_hal_msp.su  subdir.mk  usb_device.d  usbd_conf.d  usbd_core.d  usbd_ctlreq.d  usbd_desc.d  usbd_ioreq.d
device/stm32f103/Release/: stm32f103.elf  stm32f103.list  stm32f103.map
device/stm32f103/Release/Core/Src/: main.su  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.d  usbd.su  usbd_conf.su  usbd_hid.su
host/lib/: Makefile
host/lib/examples/: adc.cpp  blink.cpp
host/lib/include/: usbd.h
host/lib/src/: usbd.cpp
host/lib/test/: main.cpp
(+64 files in other folders)
